# hfsm

./: FAISS_course_vector_idx.index  async_scrape.py  bing_search.py  broken.ipynb  build.ipynb  cnumbers.txt  concat.py  context_chunker.py  dalle.py  download_url.py  extract_soup.py  gpt.py  hfsm_example.ipynb  inputs.jsonl  json_join.ipynb  pdf.py  pyproject.toml  test.ipynb  test_modal.ipynb
eva_db/: evadb.db
eva_db/index/: FAISS_course_vector_idx.index
